# arbor

./: .cursorrules  .env.example  .gitignore  .prettierignore  DATA_FLOW.md  middleware.ts  package-lock.json  package.json
app/(auth)/: layout.tsx
app/(auth)/login/: page.tsx
app/(auth)/signup/: page.tsx
app/(auth)/subscribe/: SubscribePlans.tsx  page.tsx
app/(dashboard)/dashboard/: page.tsx
app/(dashboard)/dashboard/cases/[id]/: page.tsx
app/(dashboard)/dashboard/new-case/: page.tsx
app/(dashboard)/dashboard/settings/billing/: ManageBillingButton.tsx  page.tsx
app/api/cases/: route.ts
app/api/stripe/checkout/: route.ts
app/api/stripe/portal/: route.ts
app/api/webhooks/stripe/: route.ts
app/auth/callback/: route.ts
app/settings/billing/: page.tsx
components/auth/: AuthShell.tsx
components/cases/: CaseUploadSection.tsx  RunAnalysisButton.tsx  StatusBadge.tsx
components/upload/: UploadZone.tsx
lib/anthropic/: client.ts
lib/auth/: require-subscribed-user.ts  safe-redirect.ts  validate.ts
lib/env/: rust-parser.ts
lib/stripe/: config.ts  server.ts
lib/supabase/: client.ts  config.ts  database.types.ts  middleware.ts  server.ts  service-role.ts
rust-parser/: .dockerignore  Cargo.toml  Dockerfile
rust-parser/src/: hash.rs  lib.rs  main.rs  pdf_text.rs  service.rs  types.rs
rust-parser/src/parsers/: dates.rs  mod.rs  sender.rs
services/: index.ts
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260405120000_core_schema.sql  20260405120001_rls.sql  20260405120002_storage.sql  20260405120003_profiles_stripe.sql
(+2 files in other folders)
