[package]
name = "rust-parser"
version = "0.1.0"
edition = "2021"
description = "Arbor co-parenting export parsing microservice (PDF and text)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-parser"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.32"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
